--- a/plugins/google-play-services/in-app-updates/overview.html
+++ b/plugins/google-play-services/in-app-updates/overview.html
@@ -138,6 +138,9 @@
                     <a class="nav-link" href="../../../contact.html">Contact</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <p class="nav-link disabled" style="margin: 0; font-size: 22px">In-App Updates</p>
+            </ul>
         </div>
     </nav>
 
@@ -233,7 +236,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">In App Updates Overview (Still In Development)</h1>
+                    <h1 class="h2 text-white-shadow">In App Updates Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
