--- a/contact.html
+++ b/contact.html
@@ -105,6 +105,17 @@
               </a>
             </li>
             <li>
+              <a class="dropdown-item" href="plugins/google-play-services/in-app-updates/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Updates" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Play: Updates
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
               <a class="dropdown-item" href="plugins/android-native/sensors/overview.html">
                   <div class="dropdown-item-content">
                       <img src="./images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
