--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
               </a>
             </li>
             <li>
+              <a class="dropdown-item" href="plugins/google-play-services/in-app-updates/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Updates" class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Play: Updates
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
               <a class="dropdown-item" href="plugins/android-native/sensors/overview.html">
                   <div class="dropdown-item-content">
                       <img src="./images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors"
@@ -123,6 +134,9 @@
         <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact</a>
         </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+          <p class="nav-link disabled" style="margin: 0; font-size: 22px">Porret Gaming</p>
       </ul>
     </div>
   </nav>
@@ -148,6 +162,25 @@
     <div class="container">
       <h1 class="section-header" style="color:rgb(134, 207, 255)" >UNREAL ENGINE</h1>
       <div class="row">
+        <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/google-play-services/in-app-updates/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom rose">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Play Services: Updates</h5>
+              </div>
+              <img src="images/InAppUpdates/GooglePlay_InAppUpdates_Feature.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine blueprint node exposing the Play Services Core In App Updates API to Android Game Developers.
+                </p>
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a>
+              </div>
+            </div>
+          </a>
+        </div>
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/in-app-reviews/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom sunflower">
