--- a/plugins/google-play-services/in-app-updates/getting_started.html
+++ b/plugins/google-play-services/in-app-updates/getting_started.html
@@ -241,7 +241,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Link will be enabled once plugin is live!).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
