add news feed to documentation pages

--- a/plugins/google-play-services/billing/purchase_history_record.html
+++ b/plugins/google-play-services/billing/purchase_history_record.html
@@ -235,7 +235,7 @@
                 </div>
             </nav>
 
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom;">
                     <h1 class="h2 text-white-shadow">Purchase History Record</h1>
@@ -311,6 +311,15 @@
                 <div style="margin-bottom: 400px">
                 </div>
             </main>
+            <div class="col-md-3 d-none d-md-block">
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 13px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow text-right">News Feed</h1>
+                </div>
+                <div class="container">
+                    <div id="news"></div>
+                </div>
+            </div>
         </div>
     </div>
 
