--- a/plugins/google-play-services/in-app-updates/overview.html
+++ b/plugins/google-play-services/in-app-updates/overview.html
@@ -138,9 +138,6 @@
                     <a class="nav-link" href="../../../contact.html">Contact</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <p class="nav-link disabled" style="margin: 0; font-size: 22px">In-App Updates</p>
-            </ul>
         </div>
     </nav>
 
@@ -233,7 +230,7 @@
                 </div>
             </nav>
 
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2 text-white-shadow">In App Updates Overview</h1>
@@ -286,6 +283,16 @@
                     </div>
                 </div>
             </main>
+
+            <div class="col-md-3 d-none d-md-block">
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 13px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow text-right">News Feed</h1>
+                </div>
+                <div class="container">
+                    <div id="news"></div>
+                </div>
+            </div>
         </div>
     </div>
 
