--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -228,7 +228,7 @@
                 </div>
             </nav>
 
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2 text-white-shadow">Getting Started</h1>
                 </div>
@@ -298,6 +298,15 @@
                 <div style="margin-bottom: 150px">
                 </div>
             </main>
+            <div class="col-md-3 d-none d-md-block">
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 13px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow text-right">News Feed</h1>
+                </div>
+                <div class="container">
+                    <div id="news"></div>
+                </div>
+            </div>
         </div>
     </div>
 
