--- a/plugins/advertising/admob/getting_started.html
+++ b/plugins/advertising/admob/getting_started.html
@@ -61,7 +61,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/saved-games/overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/events/overview.html">
+                            <a class="dropdown-item" href="../events/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
+                            <a class="dropdown-item" href="overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="../in-app-reviews/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -109,7 +109,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-updates/overview.html">
+                            <a class="dropdown-item" href="../in-app-updates/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Updates"
                                         class="dropdown-item-image">
@@ -152,12 +152,12 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="overview.html">
+                            <a class="nav-link inactive" href="overview.html">
                                 Overview
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="getting_started.html">
+                            <a class="nav-link active" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
@@ -226,102 +226,99 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
-                <div class="container border-bottom"
-                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Advanced Admob Ads (In Development)</h1>
+                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Getting Started</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">
-                            <b>Advanced Admob Ads</b>
-                        </p>
-                        <p class="content">
-                            The Google Admob Library is a tool used to display various different types of adverts within your mobile application. With this, developers
-                            can monetize their games by displaying advertisements in accordance with their guidelines.
-                        </p>
-                        <ul>
-                            <li class="blue-diamond">Privacy Settings (GDPR and COPPA)</li>
-                            <li class="blue-diamond">Banner Ads</li>
-                            <li class="blue-diamond">App Open Ads</li>
-                            <li class="blue-diamond">Interstitial Ads</li>
-                            <li class="blue-diamond">Rewarded Interstitial Ads</li>
-                            <li class="blue-diamond">Rewarded Video Ads</li>
-                            <li class="blue-diamond">Mediation</li>
-                        </ul>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            By making use of these different types of advertisements within your appication at key points, you can unlock additional revenue streams, ultimately creating a sustainable business model for your Android Game.
-                        </p>
+                        <ol class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Purchase the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Enabled on Release).
+                            </p>
+                            <li class="list-group-item">
+                                Install the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
+                                Go to the Library tab and find the plugin and add it to the engine.
+                            </p>
+                            <li class="list-group-item">
+                                Enable Advanced Ads Pro Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In Unreal Engine, the plugin will be available in the plugins section.</br>
+                                Go to <span style="font-weight: 500">Settings</span> -> <span
+                                    style="font-weight: 500">Plugins</span> -> Search for "<span
+                                    style="font-weight: 500">Advanced Ads Pro</span>" and ensure it is enabled.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/Admob/Admob_Plugin_Enabled.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Setup your Admob Account
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Go to the official <a href="https://apps.admob.com/v2/home">Admob Website</a> and setup your account.
+                            </p>
+                            <li class="list-group-item">
+                                Find your Admob App ID
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Once on the Admob Website, go to <span style="font-weight: 500">Apps</span> and select your application. </br>
+                                Navigate the left side-bar by going to  <span style="font-weight: 500">Apps</span> -> <span style="font-weight: 500">App settings</span>.</br>
+                                Extract your <span style="font-weight: 500">App ID</span> starting with "<span style="font-weight: 400; font-style: italic">ca-app-pub-###~###</span>".
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/GetAdmobAppID.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Insert your Admob App ID in Unreal Engine
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In your Unreal Engine Editor, go to <span style="font-weight: 500;">Project Settings</span> ->
+                                <span style="font-weight: 500;">Plugins</span> -> <span style="font-weight: 500;">Advanced Ads Pro</span> in the Project Settings left navigation bar. 
+                                Add your Admob App ID retrieved from the official Admob Website in the "<span style="font-weight: 500;">AdMob Settings</span>" section under "<span style="font-weight: 500;">Admob App ID</span>".
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/UpdateAdmobAppID.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Download Android API-34
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Download Android API-34 from Android Studio.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/AndroidStudioSDKDownload.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Target Android API-34
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In your Unreal Engine Editor, go to <span style="font-weight: 500;">Project Settings</span> -> <span style="font-weight: 500;">Platforms</span> -> <span style="font-weight: 500;">Android</span> 
+                                in the Project Settings left navigation bar. Under <span style="font-weight: 500;">APK Packaging</span> at the top, go to the field "<span style="font-weight: 500;">Target SDK Version</span>" and put in "<span style="font-weight: 500;">34</span>" or greater.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 40px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/UpdateAndroidTargetAPI.png">
+                                </div>
+                            </div>
+                            
+                        </ol>
                     </div>
-                    <div class="info" style="margin-top: 20px">
-                        <p class="content">
-                            <b>The Unreal Engine Plugin</b>
-                        </p>
-                        <p class="content">
-                            Introducing the Unreal Engine plugin for the Admob service, a powerful tool that brings all the features of the latest <span style="font-weight: 500">Google Admob Service</span> directly to your Unreal Engine projects.
-                            This plugin is designed to be as simple as possible, while exposing as much of the library features to you.
-                        </p>
-                        <p class="content">
-                            We have taken special measures to <span style="font-weight: 500">handle all Engine versions from Unreal Engine 4.27 onwards</span> to cater for all the requirements of keeping the Admob library as up to date as possible.
-                            With the latest version of Admob, the outdated UE built in Google Play Services library does not work, so we have also <span style="font-weight: 500">released a plugin which offers the upgraded Google Play Services</span> to allow you to use both in the event that is part of your requirements.
-                            In addition to this, all our available plugins can automatically detect this upgrade and adapt to the latest library as well.
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Here is a summary of all the blueprint nodes the Advanced Admob Ads plugin has to offer.
-                        </p>
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Privacy Settings</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/PrivacyBlueprintNodes.png" style="width: 75%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Banner Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/BannerBlueprintNodes.png" style="width: 70%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced App Open Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/AppOpenBlueprintNodes.png" style="width: 80%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Interstitial Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/InterstitialBlueprintNodes.png" style="width: 60%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Rewarded Video Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/RewardedVideoBlueprintNodes.png" style="width: 70%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Rewarded Interstitial Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/RewardedInterstitialBlueprintNodes.png" style="width: 75%">
-                    </div>
-
-                    <!-- <div class="info" style="margin-top: 20px">
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Here is how this plugin relates to our other Google Play Services Plugin:
-                        </p>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Billing/Billing_Plugin_AllNodes.png" style="width: 80%">
-                    </div> -->
-                    <div style="margin-bottom: 200px">
-                    </div>
+                </div>
+                <div style="margin-bottom: 150px">
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
